# Llama-3.2-1B-Japanese

./: .gitignore  CLAUDE.md  DATASET.md  README.md  pyproject.toml
data/sentencepiece/: out.model
data/wikipedia_dataset/test/: data-00000-of-00001.arrow  state.json
data/wikipedia_dataset/train/: data-00000-of-00005.arrow  data-00001-of-00005.arrow  data-00002-of-00005.arrow  data-00003-of-00005.arrow  data-00004-of-00005.arrow  dataset_info.json  state.json
data/wikipedia_dataset/validation/: data-00000-of-00001.arrow  state.json
scripts/: accelerate_config.yml  accelerate_config.yml.example  create_dataset.py  create_pretrain_dataset.py  inference.py  launch_training.sh  preprocess_dataset.py  requirements.txt  train_model.py  train_tokenizer.py
scripts/sentencepiece/: out.model
src/: create_dataset.py  inference.py  train_model.py  train_tokenizer.py
