[project]
name = "llama-3-2-1b-japanese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate[sagemaker]>=1.9.0,<1.10.0",
    "datasets>=4.4.1",
    "psutil>=7.1.3",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch==2.8.0",
    "transformers==4.56.2",
    "wandb>=0.23.1",
]
